--- a/stock.html
+++ b/stock.html
@@ -30,11 +30,12 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
+    
   </head>
-  <body id="body-pd">
-    <header class="header" id="header">
+  <body id="body-pd" style="background-color: #e9e5e5;">
+    <header class="header border border-bottom" id="header">
       <div class="header_toggle">
-        <i class="bx bx-menu" id="header-toggle"></i>
+        <!-- <i class="bx bx-menu" id="header-toggle"></i> -->
         <!-- <h2>Smart Soft</h2> -->
       </div>
       <div class="">
@@ -46,7 +47,7 @@
         /></a>
       </div>
     </header>
-    <div class="l-navbar" id="nav-bar">
+    <div class="l-navbar border border-end" id="nav-bar">
       <nav class="nav">
         <div>
           <a
@@ -54,115 +55,59 @@
             class="nav_logo"
             style="text-decoration: none"
           >
-            <i class="bx bxl-codepen nav_icon" style="color: #fff"></i>
-            <span class="nav_logo-name">Smart Soft</span>
+            <i class="bx bxl-codepen nav_icon text-secondary" ></i>
+            <span class="nav_logo-name fs-5">Smart Soft</span>
           </a>
           <div class="nav_list">
-            <a
-              href="./dashboard.html"
-              class="nav_link active"
-              style="text-decoration: none"
-            >
+            <a href="./dashboard.html?id=1" class="nav_link active" style="text-decoration: none;" id="1">
               <i class="bx bx-grid-alt nav_icon"></i>
               <span class="nav_name">Dashboard</span>
             </a>
-            <!-- <a href="#" class="nav_link" style="text-decoration: none;">
-              <i class="fa-solid fa-cart-shopping nav_icon"></i>
-              <span class="nav_name">POS</span>
-            </a> -->
-            <a
-              href="./sale.html"
-              class="nav_link"
-              style="text-decoration: none"
-            >
+            <a href="./sale.html?id=2" class="nav_link" style="text-decoration: none;" id="2">
               <i class="fa-brands fa-shopify nav_icon"></i>
               <span class="nav_name">Sale</span>
             </a>
-            <a
-              href="./purchase.html"
-              class="nav_link"
-              style="text-decoration: none"
-            >
+            <a href="./purchase.html?id=3" class="nav_link" style="text-decoration: none;" id="3">
               <i class="fa-solid fa-cart-shopping nav_icon"></i>
               <span class="nav_name">Purchase</span>
             </a>
-            <a
-              href="./product_list.html"
-              class="nav_link"
-              style="text-decoration: none"
-            >
+            <a href="./product_list.html?id=4" class="nav_link" style="text-decoration: none;" id="4">
               <i class="fa-solid fa-box nav_icon"></i>
               <span class="nav_name">Products</span>
             </a>
-            <a
-              href="./category.html"
-              class="nav_link"
-              style="text-decoration: none"
-            >
+            <a href="./category.html?id=5" class="nav_link" style="text-decoration: none;" id="5">
               <i class="fa-solid fa-layer-group nav_icon"></i>
               <span class="nav_name">Categories</span>
             </a>
-            <a
-              href="./unit.html"
-              class="nav_link"
-              style="text-decoration: none"
-            >
+            <a href="./unit.html?id=6" class="nav_link" style="text-decoration: none;" id="6">
               <i class="fa-brands fa-unity nav_icon"></i>
               <span class="nav_name">Units</span>
             </a>
-            <a
-              href="./brand.html"
-              class="nav_link"
-              style="text-decoration: none"
-            >
-              <i class="bx bxl-sketch nav_icon"></i>
+            <a href="./brand.html?id=7" class="nav_link" style="text-decoration: none;" id="7">
+              <i class='bx bxl-sketch nav_icon'></i>
               <span class="nav_name">Brands</span>
             </a>
-            <a
-              href="./stock.html"
-              class="nav_link"
-              style="text-decoration: none"
-            >
+            <a href="./stock.html?id=8" class="nav_link" style="text-decoration: none;" id="8">
               <i class="fa-solid fa-store nav_icon"></i>
               <span class="nav_name">Stock</span>
             </a>
-            <a
-              href="./customer.html"
-              class="nav_link"
-              style="text-decoration: none"
-            >
+            <a href="./customer.html?id=9" class="nav_link" style="text-decoration: none;" id="9">
               <i class="fa-solid fa-people-group nav_icon"></i>
               <span class="nav_name">Customers</span>
             </a>
-            <a
-              href="./supplier.html"
-              class="nav_link"
-              style="text-decoration: none"
-            >
+            <a href="./supplier.html?id=10" class="nav_link" style="text-decoration: none;" id="10">
               <i class="fa-solid fa-user-group nav_icon"></i>
               <span class="nav_name">Suppliers</span>
             </a>
-            <a
-              href="./employee.html"
-              class="nav_link"
-              style="text-decoration: none"
-            >
+            <a href="./employee.html?id=11" class="nav_link" style="text-decoration: none;" id="11">
               <i class="fa-solid fa-circle-user nav_icon"></i>
               <span class="nav_name">Employees</span>
             </a>
-            <a
-              href="./salary.html"
-              class="nav_link"
-              style="text-decoration: none"
-            >
-              <i class="bx bxs-coin-stack nav_icon"></i>
+            <a href="./salary.html?id=12" class="nav_link" style="text-decoration: none;" id="12">
+              <i class='bx bxs-coin-stack nav_icon'></i>
               <span class="nav_name">Salary</span>
             </a>
-            <a
-              class="nav_link"
-              onclick="handleLogout()"
-              style="text-decoration: none"
-            >
+            <a class="nav_link" onclick="handleLogout()" style="text-decoration: none; cursor: pointer;">
               <i class="bx bx-log-out nav_icon"></i>
               <span class="nav_name">Logout</span>
             </a>
@@ -172,78 +117,78 @@
     </div>
 
     <!--Container Main start-->
-    <div class="" style="margin-top: 65px">
+    <div class="" style="margin-top: 78px">
       <h1 style="color: #374151; font-weight: 500">Product Stock</h1>
 
-      <div>
-        <h6 class="mt-4 mb-3">Stock List</h6>
-      </div>
-      <div id="cat-table">
+      
+      <div id="cat-table" class="border p-3 mt-4" style="background-color: #FFFFFF; border-radius: 13px; height: 750px">
+        <div>
+          <h6 class="mb-4">Stock List</h6>
+        </div>
         <div
           class="table-responsive"
-          style="overflow-x: auto; -webkit-overflow-scrolling: touch"
         >
           <table class="table">
             <thead>
               <tr>
                 <th
                   scope="col"
-                  style="background: rgba(113, 99, 186); color: #fff"
+                  style="background: #5D5FF0; color: #fff"
                 >
                   #
                 </th>
                 <th
                   scope="col"
-                  style="background: rgba(113, 99, 186); color: #fff"
+                  style="background: #5D5FF0; color: #fff"
                 >
                   Product
                 </th>
                 <th
                   scope="col"
-                  style="background: rgba(113, 99, 186); color: #fff"
+                  style="background: #5D5FF0; color: #fff"
                 >
                   Category
                 </th>
                 <th
                   scope="col"
-                  style="background: rgba(113, 99, 186); color: #fff"
+                  style="background: #5D5FF0; color: #fff"
                 >
                   Price
                 </th>
                 <th
                   scope="col"
-                  style="background: rgba(113, 99, 186); color: #fff"
+                  style="background: #5D5FF0; color: #fff"
                 >
                   Cost
                 </th>
                 <th
                   scope="col"
-                  style="background: rgba(113, 99, 186); color: #fff"
+                  style="background: #5D5FF0; color: #fff"
                 >
                   Purchase
                 </th>
-                <!-- <th scope="col" style="background: rgba(113, 99, 186); color: #fff;">Unit</th> -->
+                <!-- <th scope="col" style="background: #5D5FF0; color: #fff;">Unit</th> -->
                 <th
                   scope="col"
-                  style="background: rgba(113, 99, 186); color: #fff"
+                  style="background: #5D5FF0; color: #fff"
                 >
                   Sold
                 </th>
                 <th
                   scope="col"
-                  style="background: rgba(113, 99, 186); color: #fff"
+                  style="background: #5D5FF0; color: #fff"
                 >
                   Avalilable Stock
                 </th>
                 <th
                   scope="col"
-                  style="background: rgba(113, 99, 186); color: #fff"
+                  style="background: #5D5FF0; color: #fff"
                 >
                   Sale Value
                 </th>
                 <th
                   scope="col"
-                  style="background: rgba(113, 99, 186); color: #fff"
+                  style="background: #5D5FF0; color: #fff"
                 >
                   Purchase Value
                 </th>
@@ -269,26 +214,26 @@
     <script src="./stock.js"></script>
     <script>
       document.addEventListener("DOMContentLoaded", function (event) {
-        const showNavbar = (toggleId, navId, bodyId, headerId) => {
-          const toggle = document.getElementById(toggleId),
+        const showNavbar = ( navId, bodyId, headerId) => {
+          // const toggle = document.getElementById(toggleId),
             nav = document.getElementById(navId),
             bodypd = document.getElementById(bodyId),
             headerpd = document.getElementById(headerId);
 
-          if (toggle && nav && bodypd && headerpd) {
-            toggle.addEventListener("click", () => {
+          // if (toggle && nav && bodypd && headerpd) {
+          //   toggle.addEventListener("click", () => {
               nav.classList.toggle("show");
 
-              toggle.classList.toggle("bx-x");
+              // toggle.classList.toggle("bx-x");
 
               bodypd.classList.toggle("body-pd");
 
               headerpd.classList.toggle("body-pd");
-            });
-          }
+          //   });
+          // }
         };
 
-        showNavbar("header-toggle", "nav-bar", "body-pd", "header");
+        showNavbar("nav-bar", "body-pd", "header");
 
         /*===== LINK ACTIVE =====*/
         const linkColor = document.querySelectorAll(".nav_link");
@@ -303,6 +248,19 @@
 
         // Your code to run since DOM is loaded and ready
       });
+    </script>
+    <script>
+      const getQueryParam = () => {
+        const param = new URLSearchParams(window.location.search).get("id")
+        if(param === '8')
+        {
+          document.getElementById("8").style.background = '#5D5FF0';
+          document.getElementById("8").style.borderRadius = '8px';
+          document.getElementById("8").style.color = '#FFFFFF';
+          // console.log('match')
+        }
+      };
+      getQueryParam();
     </script>
 
     <script
