--- a/purchase.html
+++ b/purchase.html
@@ -213,7 +213,7 @@
                   id="tryMe"
                   style="background: #5D5FF0; color: #fff"
                 >
-                  Purchase
+                  Payment
                 </button>
               </div>
             </form>
