--- a/sale.html
+++ b/sale.html
@@ -132,7 +132,7 @@
             <div>
               <h5 class="mb-4">New Sale</h5>
             </div>
-            <form id="sale-form" onsubmit="addSale(event)">
+            <form id="sale-form"  onsubmit="addSale(event)" >
               <p class="fs-6 mb-1 pb-1" style="font-weight: 500">
                 Select Customer:
               </p>
@@ -187,7 +187,7 @@
                   id="tryMe"
                   style="background: #5D5FF0; color: #fff"
                 >
-                  Sale
+                  Payment
                 </button>
               </div>
             </form>
@@ -277,10 +277,11 @@
                 <tbody id="tbody"></tbody>
               </table>
             </div>
+            <div class="col-lg-2 col-md-4 col-sm-12 mx-auto mt-2" id="empty">
+              <img src="./images/empty-folder.png" alt="" class="img-fluid col-12" />
+            </div>
           </div>
-          <div class="col-lg-2 col-md-4 col-sm-12 mx-auto mt-2" id="empty">
-            <img src="./images/empty-folder.png" alt="" class="img-fluid col-12" />
-          </div>
+          
         </div>
       </div>
     </div>
