amount can't zero

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <p class="mt-5" style="line-height: 1.8">
             POS Software Price in Bangladesh to manage your entire retail
             operations. Manage your Retail Stores- sales, inventory, purchases,
-            customers, finances & more easily with Sunshine POS Software. Create
+            customers, finances & more easily with SmartSoft POS Software. Create
             & Print Professional Invoices & enjoy uninterrupted GST Billing &
             Return Filing; integrate with Mobile Apps to increase your revenues.
           </p>
@@ -51,9 +51,6 @@
             >
               VIEW DEMO
             </a>
-            <button class="btn" style="background-color: #e11d48; color: #fff">
-              PROPOSAL
-            </button>
           </div>
         </div>
         <div class="col-lg-6 col-md-12 col-sm-12 p-3">
@@ -183,7 +180,7 @@
           style="border-radius: 15px; box-shadow: 4px 4px 8px gray"
         >
           <div class="px-4">
-            <p class="mt-5 mb-0 pb-0 fs-3">Professional(Customizable)</p>
+            <p class="mt-5 mb-0 pb-0 fs-3">Professional</p>
             <h1 class="mt-1 pt-1">20,000 BDT</h1>
             <hr />
           </div>
@@ -266,7 +263,7 @@
     <div class="mt-5 mb-5 pt-4 pb-2 text-center">
       <h1 style="color: #4b5563; font-weight: 400">After Sales Support</h1>
       <p class="mt-4">
-        Sunshine Accounting Software helps you stay on top of your business
+        SmartSoft Accounting Software helps you stay on top of your business
         finances <br />
 
         without any accounting knowledge
