--- a/purchase.html
+++ b/purchase.html
@@ -176,7 +176,7 @@
                 "
               />
               <p class="fs-6 mb-1 pb-1 mt-2" style="font-weight: 500">
-                Payable:
+                Payable Amount:
               </p>
               <input
                 type="number"
@@ -191,7 +191,7 @@
                   width: 100%;
                 "
               />
-              <p class="fs-6 mb-1 pb-1 mt-2" style="font-weight: 500">Paid:</p>
+              <p class="fs-6 mb-1 pb-1 mt-2" style="font-weight: 500">Paid Amount:</p>
               <input
                 type="number"
                 placeholder="Enter Amount"
