--- a/customerDueReport.html
+++ b/customerDueReport.html
@@ -111,7 +111,7 @@
         </div>
 
         
-        <div id="cat-table" class="border p-3 mt-4" style="background-color: #FFFFFF; border-radius: 13px; height: 720px">
+        <div id="cat-table" class="border p-3 mt-4 me-3" style="background-color: #FFFFFF; border-radius: 13px; height: 720px">
           <div>
               <h6 class="mb-4">Customer List</h6>
           </div>
