--- a/stock.html
+++ b/stock.html
@@ -121,7 +121,7 @@
       <h1 style="color: #374151; font-weight: 500">Product Stock</h1>
 
       
-      <div id="cat-table" class="border p-3 mt-4" style="background-color: #FFFFFF; border-radius: 13px; height: 750px">
+      <div id="cat-table" class="border p-3 mt-4 me-3" style="background-color: #FFFFFF; border-radius: 13px; height: 750px">
         <div>
           <h6 class="mb-4">Stock List</h6>
         </div>
